# routilux

./: .gitignore  .readthedocs.yml  CHANGELOG.md  DEVOPS.md  LICENSE  MANIFEST.in  Makefile  NAME_SUGGESTIONS.md  README.md  README_RTD_TESTING.md  enable_all_tests.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  run_all_tests.py  setup.py  test_rtd.sh
.github/workflows/: ci.yml  publish.yml
docs/: DOCUMENTATION_GUIDE.md  Makefile  README.md
docs/source/: changelog.rst  conf.py  design_architecture.rst  design_optimization.rst  design_overview.rst  features.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  testing.rst
docs/source/_static/: custom.css
docs/source/api_reference/: completion.rst  connection.rst  error_handler.rst  event.rst  execution_tracker.rst  flow.rst  index.rst  job_state.rst  routine.rst  slot.rst
docs/source/design/: index.rst
docs/source/examples/: concurrent_flow_demo.rst  index.rst
docs/source/tutorial/: advanced_patterns.rst  concurrent_execution.rst  connecting_routines.rst  data_flow.rst  error_handling.rst  getting_started.rst  index.rst  serialization.rst  state_management.rst
docs/source/user_guide/: aggregation_pattern.rst  connections.rst  error_handling.rst  flows.rst  index.rst  job_state.rst  routines.rst  serialization.rst  state_management.rst
examples/: README.md  aggregator_demo.py  basic_example.py  complex_routine_demo.py  concurrent_flow_demo.py  data_processing.py  error_handling_example.py  job_state_management.py  llm_agent_complex_demo.py  retry_with_router_demo.py  state_management_example.py
flowforge/: __init__.py  connection.py  error_handler.py  event.py  execution_tracker.py  flow.py  job_state.py  routine.py  serialization_utils.py  slot.py
flowforge/builtin_routines/control_flow/tests/: test_control_flow.py
flowforge/builtin_routines/data_processing/tests/: test_data_processing.py
flowforge/builtin_routines/text_processing/: result_extractor.py  text_renderer.py
flowforge/builtin_routines/text_processing/tests/: test_text_processing.py
flowforge/builtin_routines/utils/tests/: test_utils.py
flowforge/utils/: __init__.py  serializable.py
playground/concurrent_execution_demo/: README.md  __init__.py  concurrent_demo.py  data_generator_routines.py
playground/llm_agent_cross_host/: cross_host_demo.py
routilux/: __init__.py  connection.py  error_handler.py  event.py  execution_tracker.py  flow.py  job_state.py  output_handler.py  routine.py  serialization_utils.py  slot.py
routilux/analysis/: __init__.py
routilux/analysis/analyzers/: __init__.py  routine.py  workflow.py
routilux/analysis/exporters/: base.py  routine_markdown.py  workflow_d2.py
routilux/builtin_routines/: CHANGELOG.md  README.md
routilux/builtin_routines/control_flow/: README.md  conditional_router.py
routilux/builtin_routines/control_flow/tests/: __init__.py  test_condition_serialization.py  test_context_access.py  test_control_flow.py
routilux/builtin_routines/data_processing/: README.md  data_transformer.py  data_validator.py
routilux/builtin_routines/data_processing/tests/: __init__.py  test_data_processing.py
routilux/builtin_routines/text_processing/: README.md  result_extractor.py  text_clipper.py  text_renderer.py
routilux/builtin_routines/text_processing/tests/: __init__.py  test_text_processing.py
routilux/builtin_routines/utils/: README.md  data_flattener.py  time_provider.py
routilux/builtin_routines/utils/tests/: __init__.py  test_utils.py
routilux/flow/: completion.py  error_handling.py  event_loop.py  execution.py  flow.py  serialization.py  state_management.py  task.py
routilux/utils/: __init__.py  serializable.py
scripts/: setup_pypi.sh
tests/: README.md  __init__.py  conftest.py  run_concurrent_tests.py  test_aggregator_pattern.py  test_concurrent_execution.py  test_connection.py  test_connection_comprehensive.py  test_error_handler_comprehensive.py  test_error_handler_retryable_exceptions.py  test_error_handling_comprehensive.py  test_error_handling_status_fix.py  test_event.py  test_event_comprehensive.py  test_event_execution_order.py  test_execution_completion.py  test_execution_state_management.py  test_execution_tracker_comprehensive.py  test_flow.py  test_flow_comprehensive.py  test_flow_edge_cases.py  test_flow_error_handling_integration.py  test_flow_state_management_comprehensive.py  test_flow_wait_for_completion_deprecation.py  test_integration.py  test_job_state.py  test_persistence.py  test_queue_mechanism.py  test_resume.py  test_routine.py  test_routine_level_error_handling.py  test_serialization_strict.py  test_serialization_utils.py  test_slot.py  test_slot_comprehensive.py  test_slot_error_to_failed_status.py  test_utils.py
tools/: README_ast_analyzer.md
